fixed ch04s04 solution